--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ djangorestframework==3.14.0
 ffmpeg-python==0.2.0
 future==0.18.3
 install==1.3.5
+JSON-log-formatter==0.5.2
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
+python-json-logger==2.0.7
 pytz==2024.1
 sqlparse==0.4.4
 typing_extensions==4.9.0
