--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 asgiref==3.7.2
 Django==5.0.2
 djangorestframework==3.14.0
+drf-yasg==1.21.7
 ffmpeg-python==0.2.0
 future==0.18.3
+inflection==0.5.1
 install==1.3.5
 JSON-log-formatter==0.5.2
+packaging==23.2
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.1
+PyYAML==6.0.1
 sqlparse==0.4.4
 typing_extensions==4.9.0
+uritemplate==4.1.1
